<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rectangle_white"
    android:orientation="vertical"
    android:padding="5dp">



    <RelativeLayout
        android:id="@+id/power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/total_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_pink"
            android:gravity="center"
            android:padding="5dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/total_count"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/total"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/attempted_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/total_count"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_gray"
            android:gravity="center"
            android:padding="5dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/total_count"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/attempted_count"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/attempted"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unattempted_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/attempted_count"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_purple"
            android:gravity="center"
            android:padding="5dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/attempted_count"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/unattempted_count"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/unattempted"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:id="@+id/martattmp_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/unattempted_count"
            android:layout_marginTop="10dp"
            android:background="@drawable/circlr_orange"
            android:gravity="center"
            android:padding="5dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/unattempted_count"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/martattmp_count"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mark_attempted"
            android:textColor="@color/cardColorYellow"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:visibility="gone"
            android:id="@+id/marknotattmp_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/martattmp_count"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_red"
            android:gravity="center"
            android:padding="5dp"
            android:text="100"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/martattmp_count"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/marknotattmp_count"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mark_attempted"
            android:textColor="@color/gradientLightBlue"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/marknotattmp_count"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/resume_test"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight=".5"
                android:background="@drawable/rectangle_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/resume_test"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight=".5"
                android:background="@drawable/rectangle_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>