<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/review_test_color"
    android:orientation="vertical"
    android:padding="5dp">



    <RelativeLayout
        android:id="@+id/power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:padding="10dp"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/question_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/unattempted_count"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_gray"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/unattempted_count"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:padding="5dp"
                    android:text="@string/total"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/attempted_count"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_red"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/attempted_count"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:padding="5dp"
                    android:text="@string/attempted"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/correct_count"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_green"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/correct_count"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:padding="5dp"
                    android:text="@string/correct"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/incorrect_count"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_red"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/incorrect_count"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:padding="5dp"
                    android:text="@string/incorrect"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:id="@+id/skipped_count"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_blue"
                    android:fontFamily="@font/helvetica_regular"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/skipped_count"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helvetica_regular"
                    android:padding="5dp"
                    android:text="@string/skipped"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/question_ll"
            android:layout_marginTop="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:background="@drawable/rectangle_blue"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>